Tue Jun 26 15:35:26 UTC 2007  Jonathan S. Pollack  <pollack_j@ociweb.com>

        * dds/DCPS/Registered_Data_Types.h:
        * dds/DCPS/Registered_Data_Types.cpp:
        * dds/DCPS/WriteDataContainer.h:
        * dds/DCPS/WriteDataContainer.cpp:

          More std::map and std::set replacements for ACE equivalents.

Mon Jun 25 22:00:42 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * DDS_info.txt:
        * docs/design/IDL_compiler.txt:

          Removed characters that were outside of the standard ASCII range.

Mon Jun 25 20:20:39 UTC 2007  Jonathan S. Pollack  <pollack_j@ociweb.com>

        * dds/DCPS/DomainParticipantFactoryImpl.cpp:
        * dds/DCPS/DomainParticipantImpl.h:
        * dds/DCPS/Util.h:
        * dds/DCPS/transport/framework/TransportFactory.h:
        * dds/DCPS/transport/framework/TransportFactory.cpp:

          More std::map and std::set replacements for ACE equivalents.

Mon Jun 25 16:24:29 UTC 2007  Jonathan S. Pollack  <pollack_j@ociweb.com>

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/Definitions.h:
        * dds/DCPS/DomainParticipantFactoryImpl.h:
        * dds/DCPS/DomainParticipantFactoryImpl.cpp:
        * dds/DCPS/Util.h:

          More std::map and std::set replacements for ACE equivalents.

Mon Jun 25 15:53:22 UTC 2007  Jonathan S. Pollack  <pollack_j@ociweb.com>

        * performance-tests/DCPS/InfoRepo_population/run_test.pl:

          Fixed a typo that stopped this test from running.

Mon Jun 25 15:47:59 UTC 2007  Jonathan S. Pollack  <pollack_j@ociweb.com>

        * DevGuideExamples/DDS/Messenger/run_test.pl:

          Fixing spacing error that prevented tests from running.

Fri Jun 22 20:44:44 UTC 2007  Jonathan S. Pollack  <pollack_j@ociweb.com>

        * dds/DCPS/DomainParticipantImpl.h:

          Removed unneeded typedefs.

Fri Jun 22 20:21:59 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * README:

          Clarified discussion of the InstanceHandles when BIT is disabled,