@@ -75,39 +75,6 @@ int init_reader_transport ()
 {
   int status = 0;
 
-  if (mixed_trans || using_udp)
-    {
-      reader_udp_impl 
-        = TheTransportFactory->create_transport_impl (SUB_TRAFFIC_UDP, 
-                                                      "SimpleUdp", 
-                                                      TAO::DCPS::DONT_AUTO_CONFIG);
-      TAO::DCPS::TransportConfiguration_rch reader_config 
-        = TheTransportFactory->create_configuration (SUB_TRAFFIC_UDP, "SimpleUdp");
-
-      TAO::DCPS::SimpleUdpConfiguration* reader_udp_config 
-        = static_cast <TAO::DCPS::SimpleUdpConfiguration*> (reader_config.in ());
-
-      if (!reader_address_given)
-        {
-          ACE_ERROR((LM_ERROR,
-                    ACE_TEXT("(%P|%t) init_reader_transport: sub UDP")
-                    ACE_TEXT(" Must specify an address for UDP.\n")));
-          return 11;
-        }
-
-
-      ACE_INET_Addr reader_address (reader_address_str);
-      reader_udp_config->local_address_ = reader_address;
-
-      if (reader_udp_impl->configure(reader_config.in()) != 0)
-        {
-          ACE_ERROR((LM_ERROR,
-                    ACE_TEXT("(%P|%t) init_reader_transport: sub UDP")
-                    ACE_TEXT(" Failed to configure the transport.\n")));
-          status = 1;
-        }
-    }
-
   if (using_mcast)
     {
       reader_mcast_impl 
@@ -152,8 +119,7 @@ int init_reader_transport ()
           status = 1;
         }
     }
-
-  if (using_reliable_multicast)
+  else if (using_reliable_multicast)
     {
       reader_reliable_multicast_impl 
         = TheTransportFactory->create_transport_impl (SUB_TRAFFIC_RELIABLE_MULTICAST, 
@@ -198,32 +164,68 @@ int init_reader_transport ()
         }
     }
 
-  else if (mixed_trans || ! using_udp)
+  else
     {
-      reader_tcp_impl 
-        = TheTransportFactory->create_transport_impl (SUB_TRAFFIC_TCP,
-                                                      "SimpleTcp", 
-                                                      TAO::DCPS::DONT_AUTO_CONFIG);
-
-      TAO::DCPS::TransportConfiguration_rch reader_config 
-        = TheTransportFactory->create_configuration (SUB_TRAFFIC_TCP, "SimpleTcp");
-
-      TAO::DCPS::SimpleTcpConfiguration* reader_tcp_config 
-        = static_cast <TAO::DCPS::SimpleTcpConfiguration*> (reader_config.in ());
-
-      if (reader_address_given)
+      if (mixed_trans || using_udp)
         {
+          reader_udp_impl 
+            = TheTransportFactory->create_transport_impl (SUB_TRAFFIC_UDP, 
+                                                          "SimpleUdp", 
+                                                          TAO::DCPS::DONT_AUTO_CONFIG);
+          TAO::DCPS::TransportConfiguration_rch reader_config 
+            = TheTransportFactory->create_configuration (SUB_TRAFFIC_UDP, "SimpleUdp");
+
+          TAO::DCPS::SimpleUdpConfiguration* reader_udp_config 
+            = static_cast <TAO::DCPS::SimpleUdpConfiguration*> (reader_config.in ());
+
+          if (!reader_address_given)
+            {
+              ACE_ERROR((LM_ERROR,
+                        ACE_TEXT("(%P|%t) init_reader_transport: sub UDP")
+                        ACE_TEXT(" Must specify an address for UDP.\n")));
+              return 11;
+            }
+
+
           ACE_INET_Addr reader_address (reader_address_str);
-          reader_tcp_config->local_address_ = reader_address;
-        }
-      // else use default address - OS assigned.
+          reader_udp_config->local_address_ = reader_address;
 
-      if (reader_tcp_impl->configure(reader_config.in()) != 0)
+          if (reader_udp_impl->configure(reader_config.in()) != 0)
+            {
+              ACE_ERROR((LM_ERROR,
+                        ACE_TEXT("(%P|%t) init_reader_transport: sub UDP")
+                        ACE_TEXT(" Failed to configure the transport.\n")));
+              status = 1;
+            }
+        }
+
+      if (!using_udp)
         {
-          ACE_ERROR((LM_ERROR,
-                    ACE_TEXT("(%P|%t) init_reader_transport: sub TCP ")
-                    ACE_TEXT(" Failed to configure the transport.\n")));
-          status = 1;
+          reader_tcp_impl 
+            = TheTransportFactory->create_transport_impl (SUB_TRAFFIC_TCP,
+                                                          "SimpleTcp", 
+                                                          TAO::DCPS::DONT_AUTO_CONFIG);
+
+          TAO::DCPS::TransportConfiguration_rch reader_config 
+            = TheTransportFactory->create_configuration (SUB_TRAFFIC_TCP, "SimpleTcp");
+
+          TAO::DCPS::SimpleTcpConfiguration* reader_tcp_config 
+            = static_cast <TAO::DCPS::SimpleTcpConfiguration*> (reader_config.in ());
+
+          if (reader_address_given)
+            {
+              ACE_INET_Addr reader_address (reader_address_str);
+              reader_tcp_config->local_address_ = reader_address;
+            }
+          // else use default address - OS assigned.
+
+          if (reader_tcp_impl->configure(reader_config.in()) != 0)
+            {
+              ACE_ERROR((LM_ERROR,
+                        ACE_TEXT("(%P|%t) init_reader_transport: sub TCP ")
+                        ACE_TEXT(" Failed to configure the transport.\n")));
+              status = 1;
+            }
         }
     }
 
